--- a/TorrentRSSFeeder/Web.config
+++ b/TorrentRSSFeeder/Web.config
@@ -11,6 +11,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="PirateBayTVURL" value="https://thepiratebay.se/browse/205/0/3/0"/>
     <add key="PirateBayXpath" value="//table[@id='searchResult']/tr/td[2]"/>
+    <add key="EZTVURL" value="https://eztv.ch/"/>
+    <add key="EZTVXpath" value="//tr[@class='forum_header_border']"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
