--- a/TorrentRSSFeeder/TorrentRSSFeeder.csproj
+++ b/TorrentRSSFeeder/TorrentRSSFeeder.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\Helpers.cs" />
     <Compile Include="Models\channel.cs" />
     <Compile Include="Models\guid.cs" />
     <Compile Include="Models\item.cs" />
@@ -148,7 +149,9 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
